uf_ulog_macro/tests/ui/fail_unsupported_char.stderr
error: unsupported field type
 --> tests/ui/fail_unsupported_char.rs:4:9
  |
4 |     ch: char,
  |         ^^^^
