uf_ulog_macro/tests/ui/fail_unsupported_char.rs
#[derive(uf_ulog_macro::ULogData)]
struct UnsupportedChar {
    timestamp: u64,
    ch: char,
}

fn main() {}
